# transfermarkt-scraper

./: .gitignore  .gitmodules  LICENSE  README.md  config.py  main.py  pyproject.toml  scraper.py
