[project]
name = "transfermarkt-scraper"
version = "0.1.0"
description = "A script for web scraping Transfermarkt transfer data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
]
